# rust-metrics-fn

./: .gitignore  Cargo.toml  README.md
examples/metrics-fn-example-prometheus/: Cargo.toml
examples/metrics-fn-example-prometheus/src/: hello.rs  main.rs
metrics-fn/: CRATE.md  Cargo.toml  publish.sh
metrics-fn-codegen/: CRATE.md  Cargo.toml  README.md
metrics-fn-codegen/src/: call_type.rs  fn_signature.rs  function.rs  lib.rs  return_type_classification.rs
metrics-fn-codegen/tests/: async_fn.rs  no_return.rs  result_fn.rs  simple.rs  sync_fn.rs
metrics-fn-example/: Cargo.toml
metrics-fn-example-log/: Cargo.toml
metrics-fn-example-log/src/: main.rs
metrics-fn-example-prometheus/: Cargo.toml
metrics-fn-example-prometheus/src/: delay.rs  fortunes.rs  fortunes_repository.rs  main.rs
metrics-fn-log/: Cargo.toml
metrics-fn-log/src/: lib.rs
metrics-fn-prometheus/: Cargo.toml
metrics-fn-prometheus/src/: lib.rs
metrics-fn/src/: lib.rs  log.rs  prometheus.rs
