[package]
name = "metrics-fn-codegen"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
log = { version = "0.4" }
proc-macro2 = { version = "1.0" }
quote = { version = "1.0" }
syn = { version = "1.0", features = [ "full" ] }

[dev-dependencies]
tokio = { version = "1.17.0", features = [ "rt", "macros", "time" ] }