[package]
name = "metrics-fn-codegen"
version = "0.2.0"
edition = "2024"
description = "Code generation module for Function Metrics."
homepage = "https://github.com/vgobbo/rust-metrics-fn"
repository = "https://github.com/vgobbo/rust-metrics-fn"
readme = "CRATE.md"
license = "MIT OR Apache-2.0"
keywords = [ "macro", "codegen", "metrics" ]
authors = [ "Vinicius Gobbo Antunes de Oliveira <vgobbo@gmail.com>" ]

[lib]
proc-macro = true

[dependencies]
log = { version = "0.4" }
proc-macro2 = { version = "1.0" }
quote = { version = "1.0" }
syn = { version = "2.0", features = [ "full" ] }

[dev-dependencies]
tokio = { version = "1.49.0", features = [ "rt", "macros", "time" ] }