[package]
name = "metrics-fn"
version = "0.1.0"
edition = "2021"

[dependencies]
lazy_static = {version = "1.4", optional = true }
log = { version = "0.4", optional = true }
metrics-fn-codegen = { path = "../metrics-fn-codegen" }
prometheus = { version = "0.13", optional = true }

[features]
default = []
record-log = [ "log" ]
record-prometheus = [ "prometheus", "lazy_static" ]