[package]
name = "metrics-fn"
version = "0.2.0"
edition = "2024"
description = "Rust Function Metrics runtime module."
homepage = "https://github.com/vgobbo/rust-metrics-fn"
repository = "https://github.com/vgobbo/rust-metrics-fn"
readme = "CRATE.md"
license = "MIT OR Apache-2.0"
keywords = [ "metrics" ]
authors = [ "Vinicius Gobbo Antunes de Oliveira <vgobbo@gmail.com>" ]

[dependencies]
lazy_static = {version = "1.5", optional = true }
log = { version = "0.4", optional = true }
metrics-fn-codegen = { path = "../metrics-fn-codegen" }
prometheus = { version = "0.14", optional = true }

[features]
default = []
record-log = [ "log" ]
record-prometheus = [ "prometheus", "lazy_static" ]
