[package]
name = "metrics-fn-example-prometheus"
version = "0.2.0"
edition = "2024"

[dependencies]
lazy_static = { version = "1.5" }
metrics-fn = { path = "../metrics-fn", features = [ "record-prometheus" ] }
prometheus = { version = "0.14" }
rand = { version = "0.9" }
rocket = { version  = "0.5" }
